# Erosion-GPU

./: .gitignore  CMakeLists.txt  Chronometer.cpp  Chronometer.hh  Examples.cpp  Examples.hh  Makefile  README.md  main.cpp
CPU/: Morphology.cpp  Morphology.hh
Data/: compo.ppm  mini.ppm  mms.ppm  sunset.ppm
Data/bench/: genImgs.sh
GPU/: Morphology.cu  MorphologyGPU.cu
Image/: Image.cpp  Image.hh  PPM.cpp  PPM.hh
Morpho/: Morphology.cpp  Morphology.hh
benchmark/: Benchmark.ipynb  CPU.csv  CPUKerSize.csv  CPUVectorized.csv  CPUVectorizedKerSize.csv  GPU.csv  GPUKersize.csv  benchCPU.sh  benchImgsize.sh  benchKersize.sh  benchplot.ipynb
cuda/: erosion.cu
